Replace sound and fix z-index for effect

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ button:hover {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2; /* videoより前、contentより後でもOK */
+    z-index: 1; /* videoより前、contentより後でもOK */
     pointer-events: none;
     width: 100vw;
     height: 100vh;
